--- a/src/components/companies/styles.css
+++ b/src/components/companies/styles.css
@@ -9,7 +9,7 @@
     margin-bottom: var(--margin-bottom-lg);
     width: 100%;
     text-align: center;
-    font-size: var(--subtitle-size);
+    font-size: var(--title-size);
     color: var(--clr-white);
 }
 
