--- a/src/components/numbers/styles.css
+++ b/src/components/numbers/styles.css
@@ -1,20 +1,31 @@
 @import '../../index.css';
 
 .numbers {
+    position: relative;
+    z-index: 10000;
     padding: var(--padding-section);
     background-color: var(--green);
     background-image: url(../../assets/dark-blue-circle.png), url(../../assets/orange-circle.png);
-  background-position: 12% 12%, 89% 55%;
-  background-repeat: no-repeat, no-repeat;
+    background-position: 12% 12%, 89% 55%;
+    background-repeat: no-repeat, no-repeat;
 }
-
+.numbers::before {
+    content: '';
+    position: absolute;
+    top: -299px;
+    right: 30px;
+    width: 420px;
+    height: 420px;
+    background-image: url(../../assets/overview-einstein.png);
+    background-repeat: no-repeat;
+}
 .numbers-headline {
     text-align: center;
     margin-bottom: var(--margin-bottom-md);
 }
 
 .numbers-headline__text {
-    font-size: var(--subtitle-size);
+    font-size: var(--title-size);
     color: var(--clr-white);
 }
 
