--- a/src/components/team/styles.css
+++ b/src/components/team/styles.css
@@ -1,1 +1,87 @@
 @import '../../index.css';
+
+.team {
+    background-color: var(--clr-white);
+    padding: var(--padding-section);
+    background-image: url(../../assets/green-circle.png), url(../../assets/dark-blue-points.png);
+    background-position: 5% 65%, 94% 26%;
+    background-repeat: no-repeat, no-repeat;
+}
+
+.team-headline {
+    text-align: center;
+    margin-bottom: var(--margin-bottom-md);
+}
+
+.team-headline__text {
+    margin-bottom: var(--margin-bottom-xs);
+    font-size: var(--subtitle-size);
+    color: var(--dark-blue-text);
+}
+
+.team-headline__subtitle {
+    padding: var(--padding-x);
+    font-size: var(--font-30);
+    color: var(--green);
+}
+.carousel-item__inner img {
+    width: 30px;
+    object-fit: contain;
+}
+.carousel-item {
+    position: relative;
+    background-color: var(--clr-white);
+    border: 2px solid var(--green);
+    border-radius: var(--radius);
+    margin: 0 20px;
+}
+.carousel-item__inner h4 {
+    display: block;
+    width: 100%;
+    text-align: right;
+    padding: 15px 60px 15px 0;
+    color: var(--green);
+    font-size: var(--font-30);
+}
+.carousel-item__inner__image {
+    position: absolute;
+    top: -50px;
+    left: 20px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    z-index: 1000;
+}
+.carousel-item__inner__image img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.carousel-container {
+    padding: 70px 0;
+}
+
+.carousel-item__inner {
+    margin-bottom: 15px;
+}
+.carousel-item__text {
+    width: 100%;
+    padding: 0 15px 30px 15px;
+    text-align: center;
+}
+.carousel-item__text p {
+    line-height: var(--line-height-sm);
+    font-size: var(--font-20);
+}
+
+.team-bottom {
+    padding: var(--padding-y);
+}
+
+.team-bottom__text {
+    text-align: center;
+    font-size: var(--font-30);
+    line-height: var(--line-height-md);
+}
